tests/negative/regression/r37.orng
impl for @sizeof(if () { }) { } 

fn main() -> Int {0}